--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "deploy": "vite build --base=/tgi-pages/ && node utils/publish.js"
   },
   "dependencies": {
+    "browser-fs-access": "^0.17.3",
     "bulma": "^0.9.2",
-    "starboard-notebook": "^0.12.0",
     "starboard-wrap": "^0.4.0",
     "vue": "^3.1.1"
   },
