--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "browser-fs-access": "^0.17.3",
     "bulma": "^0.9.2",
+    "idb-keyval": "^5.0.6",
     "starboard-wrap": "^0.4.0",
     "vue": "^3.1.1"
   },
