--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "deploy": "vite build --base=/tgi-pages/ && node utils/publish.js"
+    "deploy": "vite build --base=/starboard-editor/ && node utils/publish.js"
   },
   "dependencies": {
+    "brotli-wasm": "^1.0.0",
     "browser-fs-access": "^0.17.3",
     "bulma": "^0.9.2",
     "idb-keyval": "^5.0.6",
