--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bulma": "^0.9.2",
     "idb-keyval": "^5.0.6",
     "starboard-wrap": "^0.4.0",
+    "uuid": "^8.3.2",
     "vue": "^3.1.1"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.1.1",
     "gh-pages": "^3.2.0",
