--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "vite build --base=/starboard-editor/ && node utils/publish.js"
   },
   "dependencies": {
+    "@github/mini-throttle": "^2.1.0",
     "brotli-wasm": "^1.0.0",
     "browser-fs-access": "^0.17.3",
     "bulma": "^0.9.2",
