--- a/package.json
+++ b/package.json
@@ -10,19 +10,18 @@
   },
   "dependencies": {
     "@github/mini-throttle": "^2.1.0",
-    "brotli-wasm": "^1.0.0",
-    "browser-fs-access": "^0.17.3",
-    "bulma": "^0.9.2",
-    "idb-keyval": "^5.0.6",
-    "starboard-wrap": "^0.4.0",
+    "brotli-wasm": "=1.0.0",
+    "browser-fs-access": "^0.20.5",
+    "bulma": "^0.9.3",
+    "idb-keyval": "^6.0.2",
+    "starboard-wrap": "^0.4.1",
     "uuid": "^8.3.2",
-    "vue": "^3.1.1"
+    "vue": "^3.2.20"
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.0",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.1.1",
-    "gh-pages": "^3.2.1",
-    "vite": "^2.3.7"
+    "@types/uuid": "^8.3.1",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "gh-pages": "^3.2.3",
+    "vite": "^2.6.5"
   }
 }
